[package]
name = "quic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"           # The name of the target.
path = "src/server.rs"


[[bin]]
name = "client"           # The name of the target.
path = "src/client.rs"


[dependencies]
anyhow = "1.0.71"
clap = {version="4.3.11",features = ["derive"]}
directories-next = "2.0.0"
quinn = "0.10.1"
rcgen = "0.11.1"
rustls = {version="0.21.5",features=["dangerous_configuration"]}
rustls-pemfile = "1.0.3"
tokio ={version= "1.29.1", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber ={version= "0.3.17"}
tracing-futures= {version = "0.2.5"}
url = "2.4.0"
webpki-roots = "0.24.0"
tokio-util = "0.7.8"
tokio-stream = "0.1.14"
tokio-macros = "2.1.0"
tokio-test = "0.4.2"
